# tcp_client_ws

./: README.md
devel/: local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/include/object_information_msgs/: Object.h
devel/lib/pkgconfig/: object_information_msgs.pc  tcp_client_ros.pc  tcp_server_ros.pc
devel/lib/python3/dist-packages/object_information_msgs/msg/: _Object.py
devel/lib/tcp_client_ros/: tcp_client_node
devel/lib/tcp_server_ros/: tcp_server_node
devel/share/common-lisp/ros/object_information_msgs/msg/: Object.lisp  _package.lisp  _package_Object.lisp  object_information_msgs-msg.asd
devel/share/gennodejs/ros/object_information_msgs/msg/: Object.js
devel/share/object_information_msgs/cmake/: object_information_msgs-msg-extras.cmake  object_information_msgs-msg-paths.cmake  object_information_msgsConfig.cmake
devel/share/roseus/ros/object_information_msgs/: manifest.l
devel/share/roseus/ros/object_information_msgs/msg/: Object.l
devel/share/tcp_client_ros/cmake/: tcp_client_rosConfig.cmake
devel/share/tcp_server_ros/cmake/: tcp_server_rosConfig.cmake
src/tcp_client_ros/: CMakeLists.txt  package.xml
src/tcp_client_ros/include/tcp_client_ros/: DataSender.h  TcpClient.h
src/tcp_client_ros/launch/: tcp_system.launch
src/tcp_client_ros/src/: DataSender.cpp  TcpClient.cpp  main.cpp
src/tcp_server_ros/: CMakeLists.txt  package.xml
src/tcp_server_ros/include/tcp_server_ros/: TcpServerNode.h
src/tcp_server_ros/src/: TcpServerNode.cpp  main.cpp
