<?xml version="1.0"?>
<package format="2">
  <name>tcp_client_ros</name>
  <version>0.0.0</version>
  <description>The tcp_client_node package</description>

  <maintainer email="wxq@todo.todo">wxq</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>object_information_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend> <!-- 添加此行 -->
  <build_depend>image_transport</build_depend> <!-- 添加此行 -->

  <!-- Build export dependencies -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>object_information_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend> <!-- 添加此行 -->
  <build_export_depend>image_transport</build_export_depend> <!-- 添加此行 -->

  <!-- Runtime dependencies -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>object_information_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend> <!-- 添加此行 -->
  <exec_depend>image_transport</exec_depend> <!-- 添加此行 -->

  <!-- Test dependencies -->
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <!-- Exported information -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
